# promptheus

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  main.rs  manager.rs  models.rs  prompt.rs  storage.rs  utils.rs
src/commands/: configure.rs  delete.rs  edit.rs  exec.rs  export.rs  handlers.rs  list.rs  mod.rs  new.rs  push.rs  search.rs  show.rs  sync.rs
src/core/: data.rs  mod.rs  operations.rs  traits.rs
src/manager/: config.rs  crud.rs  mod.rs  query.rs  sync.rs
src/sync/: gist.rs  mod.rs
src/utils/: command.rs  console.rs  error.rs  export.rs  format.rs  interactive.rs  mod.rs  output.rs  pagination.rs  search.rs  stats.rs  time_format.rs
