[package]
name = "promptheus"
version = "0.1.11"
edition = "2024"
description = "A Rust-based prompt CLI management tool"
license = "MIT"
readme = "README.md"
repository = "https://github.com/vandee/promptheus"
keywords = ["prompt", "management", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
crossterm = "0.29"
anyhow = "1.0"
dirs = "6.0"
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"
tokio = { version = "1.47.1", features = ["full"] }
toml_edit = "0.23.7"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.89"
colored = "3"
minus = { version = "5.6", features = ["static_output", "dynamic_output"] }
